# sfincs-bmi-server

./: Dockerfile  README.md  example_notebook.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
src/: CMakeLists.txt  sfincs_bmi.cxx  sfincs_bmi.hxx  sfincs_bmi_server.cxx  sfincs_bmi_test.cxx
